prevent double scroll in edit overlay

--- a/gui/style/index.less
+++ b/gui/style/index.less
@@ -396,7 +396,7 @@ button {
 .overlayContent {
     flex: 1;
     border-bottom: 1px solid grey;
-    padding: 0.5em;
+    padding:0;
     overflow-y: auto;
     overflow-x: hidden;
     word-break: break-all;
